--- a/Blurred Limes.html
+++ b/Blurred Limes.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Recipe Finder</title>
+	<title>Blurred Limes</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="Recipe - Copy.css">
+	<link rel="stylesheet" type="text/css" href="Blurred Limes CSS.css">
 </head>
 <body>
 
-
+<!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
   <a class="navbar-brand" href="#"><i class="fas fa-lemon"></i> Blurred <span>Limes</span></a>
@@ -32,6 +32,7 @@
   </div>
 </div>
 </nav> 
+<!-- Navigation Bar -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,6 +60,7 @@
       </div>
     </div>
   </div>
+  <!-- Start ingredient form -->
   <div class="form">
   <form id="theForm" class="mt-2">
       <label for="I1">Ingredient:</label>
@@ -74,9 +76,10 @@
       <button type="submit" class="mt-2">Submit</button>
   </form>
   </div>
+  <!-- End ingredient form -->
 </div>
 
-<script src="recipe.js"></script>
+<script src="Blurred Limes  JS.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
